--- a/src/train_model_scratch.ipynb
+++ b/src/train_model_scratch.ipynb
@@ -59,7 +59,6 @@
    "source": [
     "data_path = '../data'\n",
     "data_dict = joblib.load(os.path.join(data_path, 'data_dict.pkl'))\n",
-    "\n",
     "exp_name = 'exp2'"
    ]
   },
@@ -683,7 +682,7 @@
     "\n",
     "    criterion = torch.nn.SmoothL1Loss(size_average = False)\n",
     "\n",
-    "    performance_dict, best_model, best_loss, time_elapsed = train_model_double_alt(model = model, \n",
+    "    performance_dict, best_model, best_loss, time_elapsed = train_model_double(model = model, \n",
     "                                                                                target_model = target_model,\n",
     "                                                                                loaders = loaders, \n",
     "                                                                                dset_sizes = dset_sizes, \n",
