--- a/src/evaluate_optimal_policy_test.ipynb
+++ b/src/evaluate_optimal_policy_test.ipynb
@@ -14,10 +14,7 @@
     "import copy\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "# from sklearn.feature_extraction import DictVectorizer\n",
     "from sklearn.externals import joblib\n",
-    "# from sklearn.model_selection import ParameterGrid\n",
-    "\n",
     "\n",
     "from functools import reduce\n",
     "from util import *"
@@ -43,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df_val = pd.read_csv(os.path.join(data_path, 'val_state_action_reward_df.csv'))"
+    "final_df_test = pd.read_csv(os.path.join(data_path, 'test_state_action_reward_df.csv'))"
    ]
   },
   {
@@ -70,8 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_dataset = evaluation_Dataset(data_dict['val']['X'], \n",
-    "                                  data_dict['val']['action']\n",
+    "eval_dataset = evaluation_Dataset(data_dict['test']['X'], \n",
+    "                                  data_dict['test']['action']\n",
     "                                 )"
    ]
   },
@@ -90,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +97,6 @@
     "    i = 0\n",
     "    for states, actions in the_loader:\n",
     "        i = i + 1\n",
-    "#         print(i)\n",
     "        batch_size = states.shape[0]\n",
     "        \n",
     "        if use_gpu:\n",
@@ -112,22 +108,37 @@
     "                                Variable(actions)\n",
     "                \n",
     "        outputs = model(states)\n",
+    "        best_actions = torch.max(outputs, 1)[1].data\n",
     "        \n",
     "        if use_gpu:\n",
     "            # Get Q(s, a)\n",
     "            current_state_values = outputs[torch.LongTensor(np.arange(batch_size).tolist()).cuda(),\n",
     "                                           actions.data]\n",
+    "            # Get Q(s, a*)\n",
+    "            best_policy_values = outputs[torch.LongTensor(np.arange(batch_size).tolist()).cuda(),\n",
+    "                                        best_actions]\n",
+    "                \n",
     "        else:\n",
     "            # Get Q(s, a)\n",
     "            current_state_values = outputs[torch.LongTensor(np.arange(batch_size)),\n",
     "                                           actions.data]\n",
+    "            # Get Q(s, a*)\n",
+    "            best_policy_values = outputs[torch.LongTensor(np.arange(batch_size)),\n",
+    "                                                   best_actions]\n",
+    "            \n",
     "        if i == 1:\n",
     "            predicted_state_action_values_list = current_state_values\n",
+    "            predicted_state_action_values_list_best = best_policy_values\n",
+    "            best_actions_list = best_actions\n",
     "        else:\n",
     "            predicted_state_action_values_list = torch.cat((predicted_state_action_values_list, \n",
     "                                                            current_state_values))\n",
+    "            predicted_state_action_values_list_best = torch.cat((predicted_state_action_values_list_best, \n",
+    "                                                            best_policy_values))\n",
+    "            best_actions_list = torch.cat((best_actions_list, \n",
+    "                                            best_actions))\n",
     "    \n",
-    "    return predicted_state_action_values_list"
+    "    return predicted_state_action_values_list, predicted_state_action_values_list_best, best_actions_list"
    ]
   },
   {
@@ -136,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hardcoded for now\n",
+    "# Hardcoded selected model for now\n",
     "config = {\n",
     "          'state_dim' : data_dict['train']['X'].shape[1],\n",
     "          'action_dim' : 25,\n",
@@ -155,57 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = dueling_net(D_in = config['state_dim'], \n",
     "                    H = config['hidden_dim'], \n",
@@ -223,25 +188,64 @@
     "else:\n",
     "    model.load_state_dict(torch.load(selected_model, map_location=lambda storage, loc: storage))\n",
     "\n",
-    "predicted_Q = evaluate_model(model, eval_loader, use_gpu)"
+    "predicted_Q_physician, predicted_Q_optimal, best_actions_list = evaluate_model(model, \n",
+    "                                                                               eval_loader, \n",
+    "                                                                               use_gpu)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  7\n",
+       "  7\n",
+       "  7\n",
+       " ⋮ \n",
+       " 18\n",
+       " 18\n",
+       " 18\n",
+       "[torch.LongTensor of size 19713]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "final_df_val['predicted_Q'] = predicted_Q.data.numpy()"
+    "best_actions_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df_val.to_csv(os.path.join(data_path, 'predicted_Q_physician_df_val.csv'))"
+    "final_df_test['predicted_Q_physician'] = predicted_Q_physician.data.numpy()\n",
+    "final_df_test['predicted_Q_optimal'] = predicted_Q_optimal.data.numpy()\n",
+    "final_df_test['best_action'] = best_actions_list.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df_test.to_csv(os.path.join(data_path, 'predicted_Q_df_test.csv'))"
    ]
   }
  ],
