--- a/src/prepare_df_for_tuplizing_R.ipynb
+++ b/src/prepare_df_for_tuplizing_R.ipynb
@@ -9,7 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading tidyverse: ggplot2\n",
+      "Warning message:\n",
+      "“Installed Rcpp (0.12.14) different from Rcpp used to build dplyr (0.12.13).\n",
+      "Please reinstall dplyr to avoid random crashes or undefined behavior.”Loading tidyverse: ggplot2\n",
       "Loading tidyverse: tibble\n",
       "Loading tidyverse: tidyr\n",
       "Loading tidyverse: readr\n",
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,8 +229,8 @@
     "                                group_by(subject_id, hadm_id, icustay_id) %>%\n",
     "                                mutate(row_id_next = ifelse(row_id == max(row_id), row_id, row_id + 1))\n",
     "\n",
-    "temp2_test <- train_df_action_reward %>% \n",
-    "                                mutate(row_id = 1:nrow(train_df_action_reward) - 1) %>% \n",
+    "temp2_test <- test_df_action_reward %>% \n",
+    "                                mutate(row_id = 1:nrow(test_df_action_reward) - 1) %>% \n",
     "                                arrange(subject_id, hadm_id, icustay_id, interval_start_time, row_id) %>%\n",
     "                                group_by(subject_id, hadm_id, icustay_id) %>%\n",
     "                                mutate(row_id_next = ifelse(row_id == max(row_id), row_id, row_id + 1))\n"
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
